Removed Json repository. Added LiteDb repository

--- a/Source/PaxSys.Pccms.ContestAdministration/appsettings.Development.json
+++ b/Source/PaxSys.Pccms.ContestAdministration/appsettings.Development.json
@@ -7,6 +7,6 @@
       "Microsoft": "Information"
     }
   },
-  "DatabaseType": "json",
-  "JsonDatabaseDirectoryPath": "./"
+  "DatabaseType": "litedb",
+  "LiteDbDatabaseDirectoryPath": "./"
 }
