--- a/Source/PaxSys.Pccms.ContestAdministration/appsettings.json
+++ b/Source/PaxSys.Pccms.ContestAdministration/appsettings.json
@@ -5,6 +5,6 @@
       "Default": "Warning"
     }
   },
-  "DatabaseType": "json",
-  "JsonDatabaseDirectoryPath": "./"
+  "DatabaseType": "litedb",
+  "LiteDbDatabaseDirectoryPath": "./"
 }
