--- a/Source/PaxSys.Pccms.ContestAdministration/PaxSys.Pccms.ContestAdministration.csproj
+++ b/Source/PaxSys.Pccms.ContestAdministration/PaxSys.Pccms.ContestAdministration.csproj
@@ -11,12 +11,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PaxSys.Pccms.DataAccess.Json\PaxSys.Pccms.DataAccess.Json.csproj" />
+    <ProjectReference Include="..\PaxSys.Pccms.DataAccess.LiteDb\PaxSys.Pccms.DataAccess.LiteDb.csproj" />
     <ProjectReference Include="..\PaxSys.Pccms.DataAccess.MySql\PaxSys.Pccms.DataAccess.MySql.csproj" />
     <ProjectReference Include="..\PaxSys.Pccms.DataAccess.Sql\PaxSys.Pccms.DataAccess.Sql.csproj" />
     <ProjectReference Include="..\PaxSys.Pccms.DataAccess\PaxSys.Pccms.DataAccess.csproj" />
     <ProjectReference Include="..\PaxSys.Pccms.Domain\PaxSys.Pccms.Domain.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models" />
   </ItemGroup>
 </Project>
