--- a/Source/PaxSys.Pccms.DataAccess.LiteDb/PaxSys.Pccms.DataAccess.LiteDb.csproj
+++ b/Source/PaxSys.Pccms.DataAccess.LiteDb/PaxSys.Pccms.DataAccess.LiteDb.csproj
@@ -9,8 +9,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\..\..\..\..\.nuget\packages\newtonsoft.json\9.0.1\lib\netstandard1.0\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <PackageReference Include="LiteDB" Version="3.1.4" />
   </ItemGroup>
 </Project>
